# disksense

./: LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: page.tsx
src/components/: directory-visualizer.tsx  drive-list.tsx  scan-progress.tsx  treemap-visualizer.tsx
src/lib/: disk-utils.ts
