[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
walkdir = "2.3"
fs_extra = "1.3"
dunce = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3.9", features = ["fileapi", "winnt", "handleapi", "errhandlingapi"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
rayon = "1.10.0"
tauri-plugin-shell = "2"
sysinfo = { version = "0.33.1", features = ["disk", "system"] }
